@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-21T01:23:19Z",
-  "count_outdated" : 404,
-  "uniques_outdated" : 232,
-  "count" : 430,
-  "uniques" : 248,
+  "timestamp" : "2022-07-21T16:21:39Z",
+  "count_outdated" : 406,
+  "uniques_outdated" : 233,
+  "count" : 431,
+  "uniques" : 249,
   "clones" : [
-    {
-      "timestamp": "2022-07-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
@@ -88,6 +81,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
