@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 25,
   "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2022-07-07T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
@@ -61,6 +56,11 @@
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
